--- a/Dataset statistics.ipynb
+++ b/Dataset statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4d9d22a3",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "from textblob import TextBlob\n",
     "from tqdm import tqdm\n",
     "from collections import Counter\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "ba2ee0fe",
    "metadata": {},
    "outputs": [],
@@ -56,16 +57,13 @@
     "            if doc_title in doc_titles_seen:\n",
     "                raise ValueError(f\"Document title already seen: {doc_title}\\n Document: {doc_path}\\n\") \n",
     "                \n",
-    "            if \"ocab\" in doc_title:\n",
-    "                raise ValueError(f\"Document is a vocabulary: {doc_title}\\n Document: {doc_path}\\n\") \n",
-    "\n",
     "            page_nr = int(passage['id'].rsplit('##', 2)[1])\n",
     "            doc_title = passage['meta']['doc_title']\n",
     "            text = passage['content']\n",
-    "            spar = [l for l in passage['meta']['SPaR_labels'][1:-1].split(\", \") if l]\n",
-    "            f_spar = [l for l in passage['meta']['filtered_SPaR_labels'][1:-1].split(\", \") if l]\n",
-    "            cluster = [l for l in passage['meta']['cluster_neighbours'][1:-1].split(\", \") if l]\n",
-    "            f_cluster = [l for l in passage['meta']['cluster_filtered'][1:-1].split(\", \") if l]\n",
+    "            spar = [l for l in passage['meta']['NER_labels'][1:-1].split(\", \") if l]\n",
+    "            f_spar = [l for l in passage['meta']['filtered_NER_labels'][1:-1].split(\", \") if l]\n",
+    "            cluster = [l for l in passage['meta']['filtered_NER_labels_domains'][1:-1].split(\", \") if l]\n",
+    "            f_cluster = [l for l in passage['meta']['neighbours'][1:-1].split(\", \") if l]\n",
     "\n",
     "            blob = TextBlob(text)\n",
     "            sents = blob.sentences\n",
@@ -108,9 +106,8 @@
     "\n",
     "def statistics_per_split(converted_files_directory):\n",
     "    # grab processed .json files\n",
-    "    if not converted_files_directory.endswith(\"/\"):\n",
-    "        converted_files_directory = converted_files_directory + \"/\"\n",
-    "    documents = glob.glob(converted_files_directory + \"**/*.json\", recursive=True)\n",
+    "\n",
+    "    documents = [x for x in converted_files_directory.glob(\"*.json\")]\n",
     "\n",
     "    # init counters\n",
     "    doc_count = 0\n",
@@ -159,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "2dadf65d",
    "metadata": {},
    "outputs": [
@@ -167,26 +164,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 471/471 [17:29<00:00,  2.23s/it]"
+      "100%|██████████████████████████████████████████████████████████████| 420/420 [44:14<00:00,  6.32s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipped 70 duplicates\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Skipped 0 duplicates\n"
      ]
     }
    ],
    "source": [
-    "directory = \"datavolume/ir_data/pdf_converted\"\n",
+    "directory = Path(\"datavolume/ir_data/foreground_pdf_converted/\")\n",
     "\n",
     "doc_count, doc_pages_for_title, doc_title_count, passage_cnt, u_passage_cnt, passage_len_cnt, \\\n",
     "            sent_cnt, sent_len_cnt, word_cnt, word_len_cnt, spar_cnt, spar_word_len_cnt, f_spar_cnt, \\\n",
@@ -195,7 +185,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
+   "id": "01fdc03a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "420"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "988bc89c",
    "metadata": {},
    "outputs": [
@@ -203,12 +214,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nr of documents: 407\n",
-      "% of documents ≥ 100 pages: 13.27%\n",
-      "Mean doc length (pages): 62.85\n",
-      "Standard deviation length (pages): 62.07\n",
+      "nr of documents: 420\n",
+      "% of documents ≥ 100 pages: 14.29%\n",
+      "Mean doc length (pages): 63.71\n",
+      "Standard deviation length (pages): 64.57\n",
       "Shortest doc (pages): 3\n",
-      "Longest doc (pages): 549\n"
+      "Longest doc (pages): 548\n"
      ]
     }
    ],
@@ -225,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "5cb7b0e1",
    "metadata": {},
    "outputs": [
@@ -233,9 +244,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Passages: 87998 (87998 unique) passages found in 471 documents\n",
-      "407 unique doc titles and total:  87998\n",
-      "Expected nr of words (100 * passages): 8799800\n"
+      "Passages: 287876 (287876 unique) passages found in 420 documents\n",
+      "420 unique doc titles and total:  287876\n",
+      "Expected nr of words (100 * passages): 28787600\n"
      ]
     }
    ],
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "ab98408c",
    "metadata": {},
    "outputs": [
@@ -256,11 +267,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Sentences: 296701\n",
-      "Unique sentences: 247766\n",
-      "% of sents ≥ 80 words: 3.81%\n",
-      "Mean sentence length (words): 23.93\n",
-      "Standard deviation length (words): 20.10\n",
+      "# Sentences: 741180\n",
+      "Unique sentences: 213703\n",
+      "% of sents ≥ 80 words: 1.44%\n",
+      "Mean sentence length (words): 25.24\n",
+      "Standard deviation length (words): 17.52\n",
       "Shortest sentence: 1\n",
       "Longest sentence: 100\n"
      ]
@@ -283,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "c61653c9",
    "metadata": {},
    "outputs": [
@@ -291,12 +302,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary size: 126359, total nr of `words`: 7105215\n",
-      "% of words ≥ 10 characters: 15.46%\n",
-      "Mean word length (chars): 5.11\n",
-      "Standard deviation length (chars): 3.40\n",
+      "Vocabulary size: 121161, total nr of `words`: 18712290\n",
+      "% of words ≥ 10 characters: 15.68%\n",
+      "Mean word length (chars): 5.14\n",
+      "Standard deviation length (chars): 3.38\n",
       "Shortest word (chars): 1\n",
-      "Longest word (chars): 387\n"
+      "Longest word (chars): 293\n"
      ]
     }
    ],
@@ -315,15 +326,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a72932b",
+   "execution_count": 38,
+   "id": "1aa17aa8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def print_counts(label_name:str, cnt:Counter, word_len_cnt:Counter):\n",
+    "    counts = [v for label_len, c in word_len_cnt.items() for v in [label_len]*c if v > 0]\n",
+    "    \n",
+    "    print(f\"{label_name} vocab size: {len(cnt.keys())}, total nr of labels: {sum(cnt.values())}\")\n",
+    "    print(\"Mean length (words): {:.2f}\".format(np.mean(counts)))\n",
+    "    print(\"Standard deviation length (words): {:.2f}\".format(np.std(counts)))\n",
+    "    print(\"Shortest label (words): {}\".format(np.min(counts)))\n",
+    "    print(\"Longest label (words: {}\\n\".format(np.max(counts)))\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "ce53a52b",
    "metadata": {},
    "outputs": [
@@ -331,79 +352,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SPaR label vocab size: 561405, total nr of labels: 2221966\n",
-      "Mean length (words): 2.21\n",
-      "Standard deviation length (words): 1.73\n",
+      "NER vocab size: 568926, total nr of labels: 5840598\n",
+      "Mean length (words): 2.58\n",
+      "Standard deviation length (words): 3.52\n",
       "Shortest label (words): 1\n",
-      "Longest label (words: 68\n",
+      "Longest label (words: 340\n",
       "\n",
-      "Filtered SPaR label vocab size: 440430, total nr of labels: 1684454\n",
-      "Mean length (words): 2.14\n",
-      "Standard deviation length (words): 1.51\n",
+      "filtered NER vocab size: 42258, total nr of labels: 1629792\n",
+      "Mean length (words): 1.27\n",
+      "Standard deviation length (words): 0.53\n",
       "Shortest label (words): 1\n",
-      "Longest label (words): 68\n",
+      "Longest label (words: 9\n",
       "\n",
-      "Cluster label vocab size: 342265, total nr of labels: 5017893\n",
-      "Mean length (words): 2.64\n",
-      "Standard deviation length (words): 1.49\n",
+      "domain NER vocab size: 45894, total nr of labels: 1278640\n",
+      "Mean length (words): 1.27\n",
+      "Standard deviation length (words): 0.53\n",
       "Shortest label (words): 1\n",
-      "Longest label (words): 65\n",
+      "Longest label (words: 9\n",
       "\n",
-      "Filtered cluster label vocab size: 278262, total nr of labels: 2793678\n",
-      "Mean length (words): 2.94\n",
-      "Standard deviation length (words): 1.81\n",
+      "NNs vocab size: 46287, total nr of labels: 3307190\n",
+      "Mean length (words): 1.48\n",
+      "Standard deviation length (words): 0.62\n",
       "Shortest label (words): 1\n",
-      "Longest label (words): 65\n",
+      "Longest label (words: 9\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# label lengths\n",
-    "spar = [v for label_len, c in spar_word_len_cnt.items() for v in [label_len]*c if v > 0]\n",
-    "print(f\"SPaR label vocab size: {len(spar_cnt.keys())}, total nr of labels: {sum(spar_cnt.values())}\")\n",
-    "print(\"Mean length (words): {:.2f}\".format(np.mean(spar)))\n",
-    "print(\"Standard deviation length (words): {:.2f}\".format(np.std(spar)))\n",
-    "print(\"Shortest label (words): {}\".format(np.min(spar)))\n",
-    "print(\"Longest label (words: {}\\n\".format(np.max(spar)))\n",
-    "\n",
-    "f_spar = [v for label_len, c in f_spar_word_len_cnt.items() for v in [label_len]*c if v > 0]\n",
-    "print(f\"Filtered SPaR label vocab size: {len(f_spar_cnt.keys())}, total nr of labels: {sum(f_spar_cnt.values())}\")\n",
-    "print(\"Mean length (words): {:.2f}\".format(np.mean(f_spar)))\n",
-    "print(\"Standard deviation length (words): {:.2f}\".format(np.std(f_spar)))\n",
-    "print(\"Shortest label (words): {}\".format(np.min(f_spar)))\n",
-    "print(\"Longest label (words): {}\\n\".format(np.max(f_spar)))\n",
-    "\n",
-    "nn = [v for label_len, c in nn_word_len_cnt.items() for v in [label_len]*c if v > 0]\n",
-    "print(f\"Cluster label vocab size: {len(nn_cnt.keys())}, total nr of labels: {sum(nn_cnt.values())}\")\n",
-    "print(\"Mean length (words): {:.2f}\".format(np.mean(nn)))\n",
-    "print(\"Standard deviation length (words): {:.2f}\".format(np.std(nn)))\n",
-    "print(\"Shortest label (words): {}\".format(np.min(nn)))\n",
-    "print(\"Longest label (words): {}\\n\".format(np.max(nn)))\n",
-    "\n",
-    "f_nn = [v for label_len, c in f_nn_word_len_cnt.items() for v in [label_len]*c if v > 0]\n",
-    "print(f\"Filtered cluster label vocab size: {len(f_nn_cnt.keys())}, total nr of labels: {sum(f_nn_cnt.values())}\")\n",
-    "print(\"Mean length (words): {:.2f}\".format(np.mean(f_nn)))\n",
-    "print(\"Standard deviation length (words): {:.2f}\".format(np.std(f_nn)))\n",
-    "print(\"Shortest label (words): {}\".format(np.min(f_nn)))\n",
-    "print(\"Longest label (words): {}\\n\".format(np.max(f_nn)))\n"
+    "print_counts(\"NER\", spar_cnt, spar_word_len_cnt)\n",
+    "print_counts(\"filtered NER\", f_spar_cnt, f_spar_word_len_cnt)\n",
+    "print_counts(\"domain NER\", nn_cnt, nn_word_len_cnt)\n",
+    "print_counts(\"NNs\", f_nn_cnt, f_nn_word_len_cnt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "223de2b3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45893"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([k for k, v in nn_cnt.items() if k.strip()])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "99c749d9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42257"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([k for k, v in f_spar_cnt.items() if k.strip()])"
+   ]
   },
   {
    "cell_type": "code",
@@ -423,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "131e39c9",
    "metadata": {},
    "outputs": [
@@ -431,160 +455,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BS 4422 (2005).json\n",
-      "BS EN ISO 1182-2010--[Reaction to fire tests for products - no Combustibility].json\n",
-      "BS 6100-6-2008.json\n",
-      "BS EN 81-58 (2018).json\n",
-      "BS 476-7-1997--[2019-08-27--02-01-39 PM].json\n",
-      "BS 7974 (2019).json\n",
-      "BS EN 13501-5-2016.json\n",
-      "BS EN 594-2011.json\n",
-      "BS EN 1993-1-2 (2005).json\n",
-      "BS 8313 (1997).json\n",
-      "BS EN 1365-3-2000--Beams.json\n",
-      "Approved Document B - 2010.json\n",
-      "BS EN 520-2004+A1-2009--[2019-09-09--05-29-22 PM].json\n",
-      "BS EN 1365-5-2004--[2019-07-25--04-50-45 PM].json\n",
-      "BS 6100-0-2010.json\n",
-      "BS EN 1365-3-2000--[2019-07-25--04-47-42 PM].json\n",
-      "BS EN 12114-2000--[Air permeability of builing elements. Laboratory tests].json\n",
-      "BS EN ISO 9346-2007--[2019-09-16--10-40-16 AM].json\n",
-      "BS EN 1993-1-2 (2005)-UK National Annex to Eurocode 3.json\n",
-      "BS EN 1634-3-2004--[2019-09-09--05-23-56 PM].json\n",
-      "BS EN 1634-1 (2014) + A1 2018.json\n",
-      "BS 8218-1998.json\n",
-      "DD ENV 1363-3-2000--Verification of furnace.json\n",
-      "BS EN 13501-1-2018.json\n",
-      "BS 6100-3-2007.json\n",
-      "BS EN 1366-2 (2015).json\n",
-      "BS 476-3 (2004).json\n",
-      "BS EN 832-2000--[Thermal performance of residential buildings].json\n",
-      "BS EN 12101-3 (2015).json\n",
-      "BS EN 1366-8 (2004).json\n",
-      "BS 476-11 (1982).json\n",
-      "BS EN 322-1993--[2020-04-15--09-10-05 PM].json\n",
-      "BS ISO 15686-2-2012--[2020-08-07--12-11-15 PM].json\n",
-      "BS EN 1365-6-2004--Stairs.json\n",
-      "BS EN 1634-2 (2008).json\n",
-      "BS EN ISO 9239-1-2010--[2020-03-17--12-52-16 PM].json\n",
-      "BS 476-20-1987--[2019-08-27--12-28-14 PM].json\n",
-      "BS EN 13238-2010--[2020-02-17--12-11-44 PM].json\n",
-      "BS EN ISO 11925-2-2010--[2020-03-17--12-43-36 PM].json\n",
-      "BS EN 13823-2010+A1-2014--[2019-07-24--11-16-41 AM].json\n",
-      "BS EN 13501-2 (2016).json\n",
-      "BS ISO 16000-6-2011--[2019-10-02--03-44-19 PM].json\n",
-      "BS EN ISO 13788-2012.json\n",
-      "BS 7974-2019--[2020-07-13--02-02-30 PM].json\n",
-      "BS EN 13501-4-2016.json\n",
-      "BS EN 520 (2004) + A1 2009.json\n",
-      "BS EN 1365-4-1999--Columns.json\n",
-      "BS EN 310-1993-Wood-based panels. Determination of modulus of elasticity in bending and bending strength.json\n",
-      "BS 476-31.1-1983--[2019-09-09--04-41-51 PM].json\n",
-      "BS 476-6 (1989) + A1 2009.json\n",
-      "BS EN 1195-1998 [Timber structures. Test methods. Performance of structural floor decking].json\n",
-      "BS 476-23-1987--Components contribution.json\n",
-      "BS EN 1366-8-2004--Smoke Extraction Ducts.json\n",
-      "BS EN 1090-2-2018--[Execution of steel structures and aluminium structures. Technical requirements for steel structures].json\n",
-      "BS 4422-2005.json\n",
-      "BS 5268-6.1-1996-.json\n",
-      "DD CEN-TS 1187-2012--[2020-02-17--11-50-47 AM].json\n",
-      "BS EN 14509-2013-Self-supporting double skin metal faced insulating panels. Factory made products. Specifications.json\n",
-      "BS 476-22 (1987).json\n",
-      "BS EN 1365-2-2014--[2019-07-25--04-47-10 PM].json\n",
-      "BS EN 1365-1-2012--General requirements.json\n",
-      "BS EN 596-1995--[Timber structures- Impact] (1).json\n",
-      "BS EN 13501-3 (2005) + A1 2009.json\n",
-      "BS 8212-1995 Dry lining and partitioning using gypsum plasterboard.json\n",
-      "BS EN 13829-2001--[Determination of air permeability of buildings. Fan method].json\n",
-      "BS 476-24-1987, ISO 6944-1985--[2019-08-27--12-34-14 PM].json\n",
-      "BS EN 12524-2000--[Building materials and properties - Hygrothermal].json\n",
-      "BS EN ISO 12572-2016--Hygrothermal performance.json\n",
-      "BS 476-21 (1987).json\n",
-      "BS EN 15725 (2010).json\n"
+      "0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None]"
+       "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[print(d.rsplit(\"/\",1)[1]) for d in duplicates]"
+    "print(len([d for d in duplicates]))\n",
+    "[print(d.stem) for d in duplicates]    # these are all the vocabularies... did I remove those?"
    ]
   },
   {
@@ -612,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
